# Pynerve

./: .bumpversion.toml  .clang-format  .codecov.yml  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  detect_cuda_compute_capabilities.cu  detect_cuda_version.cc  job_logs.txt  mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements-dev.in  requirements-dev.txt  requirements.txt  tox.ini  tsan_suppressions.txt
python/: CMakeLists.txt  pyproject.toml
python/bindings/: nerve_algorithms_bindings.cpp  nerve_api_bindings.cpp  nerve_extras_bindings.cpp  nerve_torch_bindings.cpp
python/pynerve/: __init__.py  __main__.py  _async_compute.py  _async_facade.py  _async_gpu.py  _async_loader.py  _compute_api.py  _compute_backend.py  _compute_core.py  _compute_engine.py  _compute_pipeline.py  _constants.py  _cupy_api.py  _cupy_compat.py  _cupy_convert.py  _cupy_memory.py  _cupy_persistence.py  _diagnostics_data.py  _diagnostics_failure.py  _diagnostics_system.py  _error_codes.py  _error_translation.py  _fallback_classes.py  _fast_boundary.py  _fast_distance.py  _fast_filtration.py  _fast_graph.py  _fast_representations.py  _fast_simplices.py  _formats_auto.py  _formats_files.py  _formats_interop.py  _image_utils.py  _numba_compat.py  _numba_dispatch.py  _numba_distance.py  _numba_graph.py  _numba_reduction.py  _numba_representations.py  _numba_simplices.py  (+26 more)
src/: CMakeLists.txt
src/acceleration/: algebra_acceleration.cpp  algorithms_acceleration.cpp  autodiff_acceleration.cpp  compression_acceleration.cpp  core_acceleration.cpp  dmt_acceleration.cpp  encoders_acceleration.cpp  filtration_acceleration.cpp  graphs_acceleration.cpp  metrics_acceleration.cpp  ml_acceleration.cpp  nn_acceleration.cpp  optimization_acceleration.cpp  persistence_acceleration.cpp  probabilistic_acceleration.cpp  runtime_acceleration.cpp  sheaf_acceleration.cpp  spectral_acceleration.cpp  streaming_acceleration.cpp
src/algorithms/: distance.cpp  distance_ops.cpp  kernel_methods.cpp  mapper_clustering.cpp  mapper_core.cpp  mapper_cover.cpp  mapper_filters.cpp  persistence_vectorization.cpp
src/anomaly/: topology_drift_ops.cpp
src/approximation/: distance_approximation_ops.cpp
src/autodiff/: autodiff_gpu_kernels.cu  autodiff_gradients.cpp  autodiff_graph.cpp  autodiff_graph_optimizer.cpp  autodiff_tensor.cpp  autodiff_variable.cpp
src/batching/: micro_batching_ops.cpp
src/cache/: feature_cache_ops.cpp
src/cmake/: simd.cmake  source_groups.cmake  targets.cmake
src/compression/: autoencoder_gpu.cu  autoencoder_gpu_api.inl  autoencoder_gpu_benchmark.inl  autoencoder_gpu_kernels.inl  decoder_cudnn_benchmark.cpp  decoder_cudnn_layer.cpp  decoder_cudnn_model.cpp  encoder_cudnn.cpp  encoder_cudnn_benchmark.cpp  encoder_cudnn_layer.cpp  encoder_cudnn_model.cpp
src/core/: CMakeLists.txt  core_simd_ops.cpp  thread_affinity_ops.cpp
src/cpu/: avx512_ph_ops.cpp
src/determinism/: gpu.cu  mpi_ops.cpp  ops.cpp
src/differentiable/: autodiff_persistence.cpp
src/distributed/: distributed_persistence.cpp  distributed_wire_format.hpp  mpi_communicator.cpp  mpi_communicator_mpi.cpp  mpi_communicator_stub.cpp  mpi_cuda_ops.cpp  nvshmem_bridge.cpp  sharded_boundary_matrix.cpp  work_stealing_scheduler.cpp
src/dmt/: discrete_gradient_parallel.cpp  dmt_simd_ops.cpp
src/encoders/: cnn_encoder.cpp  encoder_factory.cpp  encoder_fusion.cpp  encoder_fusion_helpers.cpp  encoder_gpu_kernels.cu  encoder_gpu_kernels_api.inl  encoder_gpu_kernels_benchmark.inl  encoder_gpu_kernels_device.inl  encoder_tensor_cores.cpp  encoder_tensor_cores_benchmark.cpp  encoder_utils.cpp  encoder_utils_reporting.cpp  graph_encoder.cpp  graph_encoder_helpers.cpp  graph_encoder_layers.cpp  hybrid_encoder.cpp  mlp_encoder.cpp  persistence_encoder.cpp  simd_encoder.cpp  simd_encoder_ops.cpp  topological_encoder.cpp
src/error/: error_handling_ops.cpp  error_registry.cpp
src/errors/: configurable_error_system_base.cpp  configurable_error_system_core.cpp  configurable_error_system_tda.cpp  errors.cpp
src/feature_access/: feature_flags.cpp  feature_flags_config.cpp  feature_flags_validation.cpp
src/features/: feature_flags.cpp
src/filtration/: simd_filtration_ops.cpp
src/formats/: gpu_mpi_overlap.cpp  packed_boundary_matrix.cpp  packed_gpu_scan.cu  persistence_pipeline.cpp
src/gpu/: error_handling_cuda_ops.cpp  executor_async_ops.cpp  hybrid_tuning.cpp  hybrid_tuning_runtime.cpp  manager_compute.cpp  manager_compute_init.cpp  manager_compute_ops.cpp  manager_compute_ops_filtration.cpp  manager_compute_ops_geometry.cpp  manager_compute_ops_hungarian.cpp  matrix_diagram_cost_ops.cpp  matrix_distance_ops.cpp  ops_column.cpp  ops_streaming.cpp  tuner_nvidia_auto.cpp  tuner_nvidia_auto_reporting.cpp
src/graphs/: attention_gpu.cu  gnn_gpu.cu  graph.cpp  graph_algorithms_detail.hpp  graph_algorithms_gpu.cu  graph_engine_gpu.cu  graph_homology.cpp  graph_multi_gpu_ops.cpp  graph_neural_layer.cpp  graph_persistent.cpp  graph_persistent_homology.cpp  graph_persistent_homology_detail.hpp  graph_sheaf.cpp  graph_topology.cpp  graph_weighted.cpp  graph_weighted_simplicial.cpp  graph_zigzag_gpu.cu  message_passing_gpu.cu
src/include/: cuda_fp16.h  cuda_runtime.h  cuda_runtime_api.h
src/instrumentation/: high_dim_error_sink.cpp  scale_tests.cpp  stability_certificates.cpp
src/io/: async_io_ops.cpp  diagram_io_ops.cpp  mmap_io_ops.cpp  npy_io_ops.cpp
src/memory/: memory_allocator_ops.cpp  memory_pool_ops.cpp
src/nn/: diagram_conv.cpp  diagram_conv_image_ops.cpp  diagram_conv_image_ops_detail.cpp  diagram_conv_kernels.cpp  diagram_conv_kernels.inl  simd_nn_ops.cpp
src/optimization/: compact_summaries.cpp  compact_summaries_detail.hpp  compact_summaries_memory.cpp  gpu_primitives.cpp  gpu_primitives_helpers.cpp  gpu_primitives_kernels.cu  parameter_sweep.cpp  streaming_ph.cpp
src/precision/: precision_policy.cpp
src/probabilistic/: probabilistic.cpp  (+5 more)
tests/: CMakeLists.txt
(+1919 files in other folders)
