[build-system]
requires = ["scikit-build-core>=0.8", "pybind11", "numpy>=1.21.0"]
build-backend = "scikit_build_core.build"

[project]
name = "pynerve"
version = "1.0.1"
description = "Fast TDA library"
readme = "README.md"
authors = [
    {name = "Nerve contributors", email = "pynerve@googlegroups.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10,<3.14"
keywords = [
    "topological-data-analysis",
    "persistent-homology",
    "tda",
    "topology",
    "data-science",
    "machine-learning",
    "computational-topology",
    "vietoris-rips",
    "persistence-diagrams",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/LSU-ATHENA/Pynerve"
Repository = "https://github.com/LSU-ATHENA/Pynerve"
Issues = "https://github.com/LSU-ATHENA/Pynerve/issues"

[project.optional-dependencies]
all = [
    "pynerve[torch,dev,ml,cache]",
]
torch = [
    "torch>=2.4",
]
triton = [
    "triton>=2.1",
    "torch>=2.4",
]
ml = [
    "scikit-learn>=1.0.0",
    "numba>=0.56.0",
]
cache = [
    "diskcache>=5.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "hypothesis>=6.0.0",
    "ruff>=0.6.0",
    "mypy>=1.8.0",
    "pyright>=1.1.0",
    "interrogate>=1.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "pre-commit>=3.0.0",
]

[tool.scikit-build]
cmake.build-type = "Release"
cmake.source-dir = "python"
cmake.args = [
    "-DBUILD_PYTHON=ON",
    "-DBUILD_TESTS=OFF",
    "-DENABLE_CUDA=OFF",
    "-DENABLE_MPI=OFF",
]
install.components = ["python"]
wheel.install-dir = "python"
wheel.packages = ["pynerve"]
sdist.include = [
    "src/**",
    "tools/**",
    "cmake/**",
    "python/CMakeLists.txt",
    "python/bindings/**",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "PTH", "PLC", "PLE", "PLR", "PLW"]
ignore = ["E501", "PLR0913", "PLR2004", "PLW2901", "UP040", "UP043"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLC0415", "PLR2004", "SIM108", "N806", "ARG001", "ARG005", "E741", "B017", "E402", "N803", "ARG002"]
"tools/*" = ["PLC0415", "PLR0911", "PLR0912", "PLR0915", "PLW0603", "SIM108", "SIM102", "F405", "F821", "F811"]
"python/pynerve/exceptions.py" = ["N812"]
"python/pynerve/_error_translation.py" = ["F401"]
"python/pynerve/_compute_core.py" = ["N806", "PLW0603"]
"python/pynerve/_validation.py" = ["N812"]
"python/pynerve/diagnostics.py" = ["N806"]
"python/pynerve/cache.py" = ["N806"]
"python/pynerve/_utils.py" = ["N806"]
"python/pynerve/torch/*" = ["N803", "N806"]
"python/pynerve/torch/_persistence_helpers.py" = ["N803", "N806", "B023"]
"python/pynerve/nn/*" = ["N803", "N806"]
"python/pynerve/diff/*" = ["N803", "N806"]
"python/pynerve/mapper/*" = ["N803", "N806"]
"python/pynerve/ssl/*" = ["N803", "N806"]
"python/pynerve/triton/*" = ["N802", "N803", "N806", "ARG001", "F841", "SIM108", "PLW0603"]
"doc/guides/transform_gpu.py" = ["PLR0911", "PLR0912", "PLR0915"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --tb=short -ra"
markers = [
    "slow: tests that take a long time (skip for quick dev iteration)",
    "generated: generated test matrix cases",
    "cpu: CPU-only tests",
    "cuda: CUDA-dependent tests",
    "fast: quick tests (not slow, cuda, or distributed); auto-applied in conftest",
    "gradient: gradient/autograd tests",
    "autograd: autograd-specific tests",
    "operators: operator case matrix tests",
    "distributed: MPI/distributed tests",
    "performance: performance regression tests",
    "quality: static analysis / contract checks",
    "torch: PyTorch-dependent tests",
    "asyncio: asyncio-dependent tests",
    "nerve_extras: C++ backed nerve_extras submodule tests",
]
filterwarnings = [
    "error",
    "ignore::ResourceWarning",
    "ignore::RuntimeWarning",
    "ignore::FutureWarning",
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
    "ignore::pytest.PytestRemovedIn10Warning",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
no_implicit_reexport = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
mypy_path = ["python/pynerve/", "tools/", "tests/"]
exclude = ['\.pyi$']

[tool.coverage.run]
source = ["python/pynerve"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
omit = ["*/_version.py", "*/tests/*"]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
fail-under = 80
exclude = ["_version.py", "tests/*", ".pyi$"]
paths = ["python/pynerve"]

[tool.pyright]
reportOptionalMemberAccess = false
