# Minimal pyproject.toml for sdist builds only.
# The main build config is at ../pyproject.toml (repo root).
# This file exists so that `python -m build --sdist python/` can
# produce a source distribution from the python/ subdirectory,
# which was the original working configuration.
#
# Metadata (authors, keywords, urls, classifiers) is mirrored from
# the root pyproject.toml so that sdist builds carry complete metadata.

[build-system]
requires = ["scikit-build-core>=0.8", "pybind11", "numpy>=1.21.0"]
build-backend = "scikit_build_core.build"

[project]
name = "pynerve"
version = "1.0.4"
description = "Fast TDA library"
readme = "../README.md"
license = {text = "MIT"}
authors = [
    {name = "Nerve contributors", email = "pynerve@googlegroups.com"}
]
requires-python = ">=3.10,<3.14"
keywords = [
    "topological-data-analysis",
    "persistent-homology",
    "tda",
    "topology",
    "data-science",
    "machine-learning",
    "computational-topology",
    "vietoris-rips",
    "persistence-diagrams",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/LSU-ATHENA/Pynerve"
Repository = "https://github.com/LSU-ATHENA/Pynerve"
Issues = "https://github.com/LSU-ATHENA/Pynerve/issues"

[tool.scikit-build]
cmake.build-type = "Release"
cmake.source-dir = "."
cmake.args = [
    "-DBUILD_PYTHON=ON",
    "-DBUILD_TESTS=OFF",
    "-DENABLE_CUDA=OFF",
    "-DENABLE_MPI=OFF",
]
sdist.include = [
    "../src/**",
    "../tools/**",
    "../cmake/**",
    "../CMakeLists.txt",
    "bindings/**",
    "../README.md",
    "../LICENSE",
]
